# LedControlV1.0-Project_TivaC-Sprints

./: CMakeLists.txt  README.md
Documents/: ARM RGB Control V1.0 - Team 1 - Sub Team A.xlsx
LED-V1.0/: LED_Control.uvoptx  LED_Control.uvprojx  led_interface.h  main.c
LED-V1.0/APP/: app.c  app.h
LED-V1.0/HAL/btn/: btn_interface.h  btn_program.c
LED-V1.0/HAL/led/: led_program.c
LED-V1.0/LIB/: std.h
LED-V1.0/Listings/: LED_Control.map
LED-V1.0/MCAL/gpio/: gpio_interface.h  gpio_private.h  gpio_program.c
LED-V1.0/MCAL/systick/: systick_interface.h  systick_private.h  systick_program.c
LED-V1.0/Objects/: LED_Control.axf  LED_Control.build_log.htm  LED_Control.htm  LED_Control.lnp  LED_Control_Target 1.dep  app.d  main.crf  main.d  system_tm4c123.crf  system_tm4c123.d
